menu de navegacion creado

--- a/index.html
+++ b/index.html
@@ -45,6 +45,26 @@
 
                 </div>
             </div>
+            <nav>
+                <div class="container">
+                    <figure>
+                        <a href="index.html">
+                            <img src="./images/logo.jpg" alt="Rovers">
+                        </a>
+                    </figure>
+                    <div class="hamburguesea">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                    <ul class="menu">
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="menu.html">Menú</a></li>
+                    </ul>
+
+                </div>
+            </nav>
         </header>
     </div>
 
