final del header

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <img src="./images/logo.jpg" alt="Rovers">
                         </a>
                     </figure>
-                    <div class="hamburguesea">
+                    <div class="hamburguesa">
                         <div></div>
                         <div></div>
                         <div></div>
@@ -62,7 +62,6 @@
                         <li><a href="blog.html">Blog</a></li>
                         <li><a href="menu.html">Menú</a></li>
                     </ul>
-
                 </div>
             </nav>
         </header>
