--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <div class="wrapper">
+    <div class="wrapper" id="top">
         <header>
             <div class="nav-top">
                 <div class="container">
@@ -65,8 +65,17 @@
                 </div>
             </nav>
         </header>
+        <footer>
+            <div class="container">
+                <p>Copyright&copy;2023 - <a href="#">Aviso Legal</a> - <a href="#">Cookies</a></p>
+            </div>
+        </footer>
     </div>
-
+    <div class="flecha">
+        <a href="#top">
+            <i class="fa-solid fa-square-caret-up"></i>
+        </a>
+    </div>
 </body>
 
 </html>
