--- a/index.html
+++ b/index.html
@@ -65,17 +65,53 @@
                 </div>
             </nav>
         </header>
-        <footer>
+        <div class="hero">
             <div class="container">
-                <p>Copyright&copy;2023 - <a href="#">Aviso Legal</a> - <a href="#">Cookies</a></p>
+                <h1>Las mejores hamburguesas del mundo</h1>
+                <h2>Bienvenido a nuestra Hamburguesería</h2>
+                <p>Come a partir de 15€</p>
+                <div>
+                    <a href="" class="boton">
+                        Nuestra Carta
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </a>
+                </div>
+                <ul class="social">
+                    <li>
+                        <a href="#">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </li>
+                </ul>
             </div>
-        </footer>
-    </div>
-    <div class="flecha">
-        <a href="#top">
-            <i class="fa-solid fa-square-caret-up"></i>
-        </a>
-    </div>
+            <main>
+
+
+
+
+
+            </main>
+            <footer>
+                <div class="container">
+                    <p>Copyright&copy;2023 - <a href="#">Aviso Legal</a> - <a href="#">Cookies</a></p>
+                </div>
+            </footer>
+        </div>
+        <div class="flecha">
+            <a href="#top">
+                <i class="fa-solid fa-square-caret-up"></i>
+            </a>
+        </div>
 </body>
 
 </html>
