estructura html de section our services

--- a/index.html
+++ b/index.html
@@ -94,24 +94,62 @@
                     </li>
                 </ul>
             </div>
-            <main>
-
-
-
-
-
-            </main>
-            <footer>
+        </div>
+        <main>
+            <section id="services">
                 <div class="container">
-                    <p>Copyright&copy;2023 - <a href="#">Aviso Legal</a> - <a href="#">Cookies</a></p>
+                    <h2>Our <span>Services</span></h2>
+                    <div class="underline">
+                        <hr noshade="noshade">
+                        <span>X</span>
+                    </div>
+                    <div class="grid">
+
+                        <article>
+                            <div>
+                                <i class="fas fa-cogs"></i>
+                            </div>
+                            <h3>1. Carne 100% natural</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora quae itaque aspernatur, expedita dolore dicta excepturi beatae incidunt sunt sed odio voluptate numquam alias corporis. Eos eveniet quo assumenda architecto.</p>
+                            <a href="" class="enlace">Leer más <i class="fas fa-long-arrow-alt-right"></i></a>
+                        </article>
+
+                        <article>
+                            <div>
+                                <i class="fas fa-truck"></i>
+                            </div>
+                            <h3>2. Cocina moderna</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora quae itaque aspernatur, expedita dolore dicta excepturi beatae incidunt sunt sed odio voluptate numquam alias corporis. Eos eveniet quo assumenda architecto.</p>
+                            <a href="" class="enlace">Leer más <i class="fas fa-long-arrow-alt-right"></i></a>
+                        </article>
+
+                        <article>
+                            <div>
+                                <i class="fas fa-heart"></i>
+                            </div>
+                            <h3>3. Servicio impecable</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora quae itaque aspernatur, expedita dolore dicta excepturi beatae incidunt sunt sed odio voluptate numquam alias corporis. Eos eveniet quo assumenda architecto.</p>
+                            <a href="" class="enlace">Leer más <i class="fas fa-long-arrow-alt-right"></i></a>
+                        </article>
+                    </div>
                 </div>
-            </footer>
-        </div>
-        <div class="flecha">
-            <a href="#top">
-                <i class="fa-solid fa-square-caret-up"></i>
-            </a>
-        </div>
+            </section>
+
+
+
+
+        </main>
+        <footer>
+            <div class="container">
+                <p>Copyright&copy;2023 - <a href="#">Aviso Legal</a> - <a href="#">Cookies</a></p>
+            </div>
+        </footer>
+    </div>
+    <div class="flecha">
+        <a href="#top">
+            <i class="fa-solid fa-square-caret-up"></i>
+        </a>
+    </div>
 </body>
 
 </html>
