--- a/index.html
+++ b/index.html
@@ -134,10 +134,35 @@
                     </div>
                 </div>
             </section>
-
-
-
-
+            <section id="aboutus">
+                <div class="container">
+                    <h2>About <span>Us</span></h2>
+                    <div class="underline">
+                        <hr noshade="noshade">
+                        <span>X</span>
+                    </div>
+                    <div class="grid">
+                        <figure>
+                            <div class="imagen">
+                                <div class="marco">
+                                    <img src="./images/about-main.jpg" alt="nuestro chef">
+                                </div>
+                            </div>
+                        </figure>
+                        <div>
+                            <h3>The history</h3>
+                            <h4>Our restaurant</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A sint repellendus fuga voluptatibus iste ipsa veritatis, numquam harum repudiandae explicabo aliquid! Eum aut inventore, perferendis pariatur exercitationem ullam in qui.</p>
+                            <div>
+                                <a href="" class="boton">
+                                    Leer más
+                                    <i class="fas fa-long-arrow-alt-right"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer>
             <div class="container">
